Expanded foaf profile

--- a/Stationery/New document/foaf profile.xhtml
+++ b/Stationery/New document/foaf profile.xhtml
@@ -7,9 +7,11 @@
 	</head>
 	<body>
 		<footer>
-			<address property="foaf:primaryTopic foaf:maker" resource="#me" typeof="foaf:Person schema:Person">
-				<span property="foaf:name schema:name">James Ó Nuanáin</span> is based in <span prefix="geo: http://www.w3.org/2003/01/geo/wgs84_pos#" property="geo.placename">London</span> and has a website called
-					<a property="foaf:weblog" href="https://isfeargoidte.me.uk/"><span xml:lang="ga-ie">Fear Goidte</span></a>. He has published three small collections of poetry available at <a href="https://isfeargoidte.me.uk/FairtheoirThuaidh/" property="foaf:publications"><span xml:lang="ga-ie">Fairtheoir Thuaidh</span></a> and all undiscriminating online ebook retailers.
+			<address property="foaf:primaryTopic foaf:maker vcard:Individual" resource="#me" typeof="foaf:Person schema:Person">
+				<span property="foaf:name schema:name vcard:fn">James Ó Nuanáin</span> is based in <span prefix="geo: http://www.w3.org/2003/01/geo/wgs84_pos#" property="geo.placename">London</span> and has a website called
+					<a property="foaf:weblog vcard:hasURL" href="https://isfeargoidte.me.uk/"><span xml:lang="ga-ie">Fear Goidte</span></a>. He can be contacted directly by <a href="mailto:homepage.feargoidte@mailhero.io" property="foaf:mbox schema:email vcard:hasEmail ">e-mail</a>.
+
+					He has published three small collections of poetry available at <a href="https://isfeargoidte.me.uk/FairtheoirThuaidh/" property="foaf:publications"><span xml:lang="ga-ie">Fairtheoir Thuaidh</span></a> and all undiscriminating online ebook retailers.
 				His inane witterings are available on
 				<span property="foaf:holdsAccount" typeof="foaf:OnlineAccount">
 					<a property="foaf:accountServiceHomepage" href="https://twitter.com/">Twitter</a>
@@ -23,7 +25,12 @@
 				He occasionally spends an hour proof-reading film subtitles and uploads them to
 				<span property="foaf:holdsAccount" typeof="foaf:OnlineAccount">
 					<a property="foaf:accountServiceHomepage" href="https://subscene.com/">Subscene</a>
-					where his <a href="https://subscene.com/u/998178"  property="foaf:accountName">account № is ‘998178’</a>.
+					where his <a href="https://subscene.com/u/998178"  property="foaf:accountName">Subscene account № is ‘998178’</a>.
+				</span>
+				His musical listening habits are exhaustively inventoried on
+				<span property="foaf:holdsAccount" typeof="foaf:OnlineAccount">
+					<a property="foaf:accountServiceHomepage" href="http://www.last.fm">last.fm</a>
+					where his <a href="http://www.last.fm/user/Lo-fi_James"  property="foaf:accountName">last.fm account name is ‘Lo-fi_James’</a>.
 				</span>
 			</address>
 		</footer>
