--- a/Stationery/Standalone style examples/foaf profile.xhtml
+++ b/Stationery/Standalone style examples/foaf profile.xhtml
@@ -7,9 +7,9 @@
 	</head>
 	<body>
 		<footer>
-			<address property="foaf:primaryTopic foaf:maker vcard:Individual" resource="#me" typeof="foaf:Person schema:Person">
-				<span property="foaf:name schema:name vcard:fn">James Ó Nuanáin</span> is based in <span prefix="geo: http://www.w3.org/2003/01/geo/wgs84_pos#" property="geo.placename">London</span> and has a website called
-					<a property="foaf:weblog vcard:hasURL" href="https://isfeargoidte.me.uk/"><span xml:lang="ga-ie">Fear Goidte</span></a>. He can be contacted directly by <a href="mailto:homepage.feargoidte@mailhero.io" property="foaf:mbox schema:email vcard:hasEmail ">e-mail</a>.
+			<address property="foaf:primaryTopic foaf:maker" resource="#me" typeof="foaf:Person vcard:Individual">
+				<span property="foaf:name vcard:fn">James Ó Nuanáin</span> is based in <span prefix="geo: http://www.w3.org/2003/01/geo/wgs84_pos#" property="geo.placename">London</span> and has a website called
+					<a property="foaf:weblog vcard:hasURL" href="https://isfeargoidte.me.uk/"><span xml:lang="ga-ie">Fear Goidte</span></a>. He can be contacted directly by <a href="mailto:homepage.feargoidte@mailhero.io" property="foaf:mbox vcard:hasEmail ">e-mail</a>.
 
 					He has published three small collections of poetry available at <a href="https://isfeargoidte.me.uk/FairtheoirThuaidh/" property="foaf:publications"><span xml:lang="ga-ie">Fairtheoir Thuaidh</span></a> and all undiscriminating online ebook retailers.
 				His inane witterings are available on
